--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "1.6.0",
+    "prettier": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.2",
+    "react-loading-skeleton": "3.3.1",
     "react-redux": "8.1.2",
+    "react-toastify": "9.1.3",
     "redux": "4.2.1",
     "redux-thunk": "2.4.2"
   },
@@ -28,7 +31,6 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.3",
     "typescript": "5.1.6",
-    "vite": "5.0.5",
-    "prettier": "3.1.1"
+    "vite": "4.4.8"
   }
 }
